[tool.poetry]
name = "cr_4_oop"
version = "0.1.0"
description = ""
authors = ["vitek <rgavih@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.2.2"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
